--- a/src/components/ChatUsers/ChatUsers.css
+++ b/src/components/ChatUsers/ChatUsers.css
@@ -2,6 +2,12 @@ ul {
   list-style: none;
 }
 
+.avatar {
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+}
+
 .chat-users {
   padding: 0 !important;
 }
@@ -16,6 +22,7 @@ ul {
   padding-right: 10px;
   background-color: #009688
 }
+
 
 
 /*.online-user-list, .online-user-list ul {
