--- a/src/components/ChatUsers/ChatUsers.css
+++ b/src/components/ChatUsers/ChatUsers.css
@@ -9,39 +9,26 @@ ul {
 }
 
 .chat-users {
-  padding: 0 !important;
+  height: 100vh;
 }
 
-.online-users-number{
+.chat-user {
   color: white;
-  margin-right: 10px;
-  background-color: #009688;
+  padding: 10px;
+  border-bottom: 1px solid white;
 }
-.online-users-number i{
+
+.chat-users-number {
+  color: white;
+  padding: 10px;
+  border-bottom: 1px solid white;
+}
+
+.user-number {
+  font-family: 'Roboto', sans-serif;
+  /*font-size: 1.4em;*/
+}
+.chat-users-number i{
   font-size: 50px;
   padding-right: 10px;
-  background-color: #009688
 }
-
-
-
-/*.online-user-list, .online-user-list ul {
- display: flex;
-}
-.online-user-list {
- margin: 0;
- height: 68px;
-}
-.online-user-list ul {
- flex: 1;
- flex-direction: row;
- flex-wrap: nowrap;
- margin: 5px;
-}
-.online-user-list li{
- display: inline-block;
-}
-.online-user-list img{
- margin: 4px;
- width: 50px;
-}*/
