--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -1,3 +1,8 @@
+.chat-message {
+  border-bottom: 1px solid grey;
+  padding: 10px 10px 20px 10px;
+}
+
 .avatar {
   width: 40px;
   height: 40px;
@@ -5,5 +10,6 @@
 }
 
 .userId {
-  margin-right: 40px;
+  /*margin-right: 40px;*/
+  margin-bottom: 10px;
 }
