--- a/src/components/ChatInputBox/ChatInputBox.css
+++ b/src/components/ChatInputBox/ChatInputBox.css
@@ -1,9 +1,8 @@
 .chat-input {
   color: white;
   position: fixed;
-  padding: 0;
+  padding-left: 60px;
   bottom: 0;
-  left: 0;
   width: 100%;
   height: 130px;
 }
@@ -15,4 +14,21 @@ button {
 
 .chip {
   font-style: italic;
+}
+
+.avatar-group {
+  width: 10%;
+  margin-left: 50px;
+}
+
+.avatar {
+  width: 40px;
+  height: 40px;
+}
+.text-input {
+  max-width: 600px;
+  margin-right: 20px;
+}
+button {
+  margin-left: 20px;
 }
