--- a/src/components/ChatInputBox/ChatInputBox.css
+++ b/src/components/ChatInputBox/ChatInputBox.css
@@ -1,19 +1,28 @@
 .chat-input {
   color: white;
   position: fixed;
-  padding-left: 60px;
   bottom: 0;
   width: 100%;
-  height: 130px;
+  height: 12vh;
+  padding-left: 80px;
+
+}
+
+.input-field {
+  /*width: 60%;*/
+}
+
+.text-input {
+  width: 60% !important;
+}
+
+button {
+  margin-left: 20px;
 }
 
 .chat .input-field input,
 button {
   border-color: #FFFFFF;
-}
-
-.chip {
-  font-style: italic;
 }
 
 .avatar-group {
@@ -24,11 +33,4 @@ button {
 .avatar {
   width: 40px;
   height: 40px;
-}
-.text-input {
-  max-width: 600px;
-  margin-right: 20px;
-}
-button {
-  margin-left: 20px;
 }
