Updates message alignment

--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -8,7 +8,15 @@
   border-radius: 10px;
 }
 
-.avatar {
+.leftalign {
+
+}
+
+.rightalign {
+  font-style: italic;
+}
+
+.left-avatar avatar {
   width: 40px;
   height: 40px;
   margin-right: 20px;
