--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -8,15 +8,8 @@
   border-radius: 10px;
 }
 
-.leftalign {
 
-}
-
-.rightalign {
-  font-style: italic;
-}
-
-.left-avatar avatar {
+.avatar {
   width: 40px;
   height: 40px;
   margin-right: 20px;
