--- a/src/App.css
+++ b/src/App.css
@@ -165,3 +165,11 @@ body {
   content: "";
   display: table;
   clear: both; }
+
+/*–––––––––––––––––––––––––––––––––––––––––––––––––– */
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    overflow-y: hidden;
+  }
